; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_wgl.c_load_WGL_I3D_swap_frame_lock.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad_wgl.c_load_WGL_I3D_swap_frame_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_WGL_I3D_swap_frame_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"wglEnableFrameLockI3D\00", align 1
@glad_wglEnableFrameLockI3D = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"wglDisableFrameLockI3D\00", align 1
@glad_wglDisableFrameLockI3D = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [25 x i8] c"wglIsEnabledFrameLockI3D\00", align 1
@glad_wglIsEnabledFrameLockI3D = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [27 x i8] c"wglQueryFrameLockMasterI3D\00", align 1
@glad_wglQueryFrameLockMasterI3D = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_WGL_I3D_swap_frame_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_WGL_I3D_swap_frame_lock(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_WGL_I3D_swap_frame_lock, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %15

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_wglEnableFrameLockI3D, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_wglDisableFrameLockI3D, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_wglIsEnabledFrameLockI3D, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_wglQueryFrameLockMasterI3D, align 8
  br label %15

15:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
